canary-rollouts-demo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-rollouts-demo
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {} # pause indefinitely
      - setWeight: 40
      - pause: {duration: 2m}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-rollouts-demo
  template:
    metadata:
      labels:
        app: canary-rollouts-demo
    spec:
      containers:
      - name: canary-rollouts-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
